--- a/data/io.github.fasthud.appdata.xml.in
+++ b/data/io.github.fasthud.appdata.xml.in
@@ -4,6 +4,6 @@
 	<metadata_license>CC0-1.0</metadata_license>
 	<project_license>GPL-3.0-or-later</project_license>
 	<description>
-	  <p>No description</p>
+	  <p>Easily configure MangoHud with pre-defined settings while having the option to adjust layouts between vertical and horizontal orientations. Additionally, the app automatically creates a backup of the previous MangoHud.conf file upon clicking the 'Apply' button."</p>
 	</description>
 </component>
