--- a/data/io.github.fastoslinux.fasthud.desktop.in
+++ b/data/io.github.fastoslinux.fasthud.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=FastHud
 Exec=fasthudgtk4devel
-Icon=io.github.fasthud
+Icon=io.github.fastoslinux.fasthud
 Terminal=false
 Type=Application
 Categories=GTK;
