--- a/data/io.github.fastoslinux.fasthud.appdata.xml.in
+++ b/data/io.github.fastoslinux.fasthud.appdata.xml.in
@@ -3,7 +3,40 @@
 	<id>io.github.fastoslinux.fasthud.desktop</id>
 	<metadata_license>CC0-1.0</metadata_license>
 	<project_license>GPL-3.0-or-later</project_license>
+	<name>FastHUD</name>
+	<summary>Configurador do MangoHud</summary>
 	<description>
-	  <p>Easily configure MangoHud with pre-defined settings while having the option to adjust layouts between vertical and horizontal orientations. Additionally, the app automatically creates a backup of the previous MangoHud.conf file upon clicking the 'Apply' button."</p>
+	  <p>Easily configure MangoHud with pre-defined settings while having the option to adjust layouts between vertical and horizontal orientations. Additionally, the app automatically creates a backup of the previous MangoHud.conf file upon clicking the 'Apply' button.</p>
 	</description>
+	<screenshots>
+		<screenshot>
+			<caption>App</caption>
+			<image>fasthud1.png</image>
+		</screenshot>
+		<screenshot>
+			<caption>Layout Vertical Completo</caption>
+			<image>fasthud2.png</image>
+		</screenshot>
+		<screenshot>
+			<caption>Layout Vertical</caption>
+			<image>fasthud3.png</image>
+		</screenshot>
+		<screenshot>
+			<caption>Layout Horizontal</caption>
+			<image>fasthud4.png</image>
+		</screenshot>
+	</screenshots>
+	<url type="homepage">https://github.com/fastoslinux/fasthud</url>
+	<url type="bugtracker">https://github.com/fastoslinux/fasthud/issues</url>
+	<project_group>FastOSLinux</project_group>
+	<releases>
+		<release date="2023-07-26" version="1.0" type="stable">
+			<description>
+				<p>Initial release of FastHUD.</p>
+			</description>
+		</release>
+	</releases>
+	<update_contact>fastos2016@gmail.com</update_contact>
+	<translation>https://github.com/fastoslinux/fasthud/</translation>
 </component>
+
