update appdata screenshot

--- a/data/io.github.fastoslinux.fasthud.appdata.xml.in
+++ b/data/io.github.fastoslinux.fasthud.appdata.xml.in
@@ -11,19 +11,19 @@
 	<screenshots>
 		<screenshot>
 			<caption>App</caption>
-			<image>fasthud1.png</image>
+			<image>https://github.com/fastoslinux/FastHud/blob/master/data/fasthud1.png</image>
 		</screenshot>
 		<screenshot>
 			<caption>Layout Vertical Completo</caption>
-			<image>fasthud2.png</image>
+			<image>https://github.com/fastoslinux/FastHud/blob/master/data/fasthud2.png</image>
 		</screenshot>
 		<screenshot>
 			<caption>Layout Vertical</caption>
-			<image>fasthud3.png</image>
+			<image>https://github.com/fastoslinux/FastHud/blob/master/data/fasthud3.png</image>
 		</screenshot>
 		<screenshot>
 			<caption>Layout Horizontal</caption>
-			<image>fasthud4.png</image>
+			<image>https://github.com/fastoslinux/FastHud/blob/master/data/fasthud4.png</image>
 		</screenshot>
 	</screenshots>
 	<url type="homepage">https://github.com/fastoslinux/fasthud</url>
