--- a/data/io.github.fastoslinux.fasthud.appdata.xml.in
+++ b/data/io.github.fastoslinux.fasthud.appdata.xml.in
@@ -30,9 +30,9 @@
     <url type="bugtracker">https://github.com/fastoslinux/fasthud/issues</url>
     <project_group>FastOSLinux</project_group>
     <releases>
-        <release date="2023-07-27" version="1.1.5" type="stable">
+        <release date="2023-08-28" version="2.0.0" type="stable">
             <description>
-                <p>Initial release of FastHUD.</p>
+                <p>Added functionality to trigger the "Apply" button using the Enter key.</p>
             </description>
         </release>
     </releases>
